[package]
name = "crates-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
futures-util = "0.3.31"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
url = "2.5.2"
napi = { version = "3.0.0-alpha.15" }
napi-derive = { version = "3.0.0-alpha.14" }

[build-dependencies]
napi-build = "1"
 